--- a/assignments/Assignment-13/index.html
+++ b/assignments/Assignment-13/index.html
@@ -55,30 +55,30 @@
             </table>
         </section>
         <section>
-            <div>
-                <form id="edit-task">
+            <div id="edit-task">
+                <form>
                     <h2>Edit task:</h2>
                     <br>
                     <label>Category:</label>
-                    <input id="edit-category" type="text" required disabled="disabled">
+                    <input id="edit-category" type="text" required>
                     <br>
                     <label>Title:</label>
-                    <input id="edit-title" type="text" required disabled="disabled">
+                    <input id="edit-title" type="text" required>
                     <br>
                     <label>Priority:</label>
-                    <input id="edit-priority" type="number" min="0" max="3" required disabled="disabled">
+                    <input id="edit-priority" type="number" min="0" max="3" required>
                     <br>
                     <label>Estimate:</label>
-                    <input id="edit-estimate" type="number" min="0" required disabled="disabled">
+                    <input id="edit-estimate" type="number" min="0" required>
                     <br>
-                    <input id="edit-button" type="submit" value="Edit" onsubmit="edit()" disabled="disabled">
+                    <input id="edit-button" type="submit" value="Edit" onsubmit="edit()">
                 </form>
             </div>
         </section>
     </main>
-    <script src="task.js"></script>
-    <script src="task-manager.js"></script>
-    <script src="scipt_js.js"></script>
+    <script src="task.ts"></script>
+    <script src="task-manager.ts"></script>
+    <script src="scipt.ts"></script>
 </body>
 
 </html>
