--- a/assignments/Assignment-13/index.html
+++ b/assignments/Assignment-13/index.html
@@ -76,9 +76,9 @@
             </div>
         </section>
     </main>
-    <script src="task.ts"></script>
-    <script src="task-manager.ts"></script>
-    <script src="scipt.ts"></script>
+    <script src="task.js"></script>
+    <script src="task-manager.js"></script>
+    <script src="scipt.js"></script>
 </body>
 
 </html>
